# haskell-book

./: .gitignore  README.md  flake.nix  shell.nix
2 Basic expressions and functions/: rewriteWithWhere.hs
3 Simple operations with text/: print2.hs  print3Broken.hs  reverse.hs
4 Because pigs can't fly/: exercises.hs  isPalindrome.hs
5 Types/: parametricity.hs  typeKwonDo.hs
7 More functional patterns/: grabBag.hs  greetIfCool.hs  guardDuty.hs  letsWriteCode.hs
8 Functions that call themselves/: mccarthy91Function.hs
9 This thing and some more stuff/: bottomMadness.hs  dataChar.hs  fearfulSymmetry.hs  poemLines.hs  zipping.hs
chapter10/: DatabaseProcessing.hs
chapter11/: Vehicles.hs
chapter13/hangman/: LICENSE  default.nix  hangman.cabal  shell.nix
chapter13/hangman/src/: Main.hs
chapter14/addition/: Addition.hs  LICENSE  addition.cabal  default.nix
chapter14/arbitrary/: arbitrary.cabal  default.nix  shell.nix
chapter14/arbitrary/src/: Main.hs
chapter14/morse/: default.nix  morse.cabal  shell.nix
chapter14/morse/src/: Main.hs  Morse.hs
chapter14/morse/tests/: tests.hs
chapter2/: comprehensionCheck.hs  healTheSick.hs
chapter3/: thirdLetter.hs
chapter4/: myAbs.hs
chapter5/: applyYourself.hs  determineTheType.hs  doesItCompile.hs
chapter6/: doesItTypecheck.hs  electricTypealoo.hs  eqInstances.hs  matchTheTypes.hs  willTheyWork.hs
chapter7/: arith2.hs  arith4.hs  artfulDodgy.hs  casePractice.hs  matchingTuples.hs  varietyPack.hs
chapter8/: fixingDividedBy.hs  recursion.hs  reviewingCurrying.hs
chapter9/: StandardFunctions.hs  cipher.hs  enumFromTo.hs  filtering.hs  moreBottoms.hs  squareCube.hs
