cabal-version:      2.4
name:               hangman
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tomasz Hołubowicz
maintainer:         alternateved@gmail.com
category:           Game
extra-source-files: data/dict.txt

common professional-properties
  default-language: Haskell2010
  build-depends:    base >=4.14.3.0,
  ghc-options:      -Wall
                    -Wredundant-constraints

executable hangman
  import:           professional-properties
  main-is:          Main.hs
  build-depends:    random,
                    split
  hs-source-dirs:   src
