cabal-version:      2.4
name:               addition
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Tomasz Hołubowicz
maintainer:         alternateved@gmail.com
category:           Text
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Addition
    ghc-options:      -Wall -fwarn-tabs
    build-depends:    base ^>=4.14.3.0,
                      QuickCheck,
                      hspec
    hs-source-dirs:   .
    default-language: Haskell2010
