cabal-version:      2.4
name:               arbitrary
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Tomasz Hołubowicz
maintainer:         alternateved@gmail.com
category:           Text
extra-source-files: CHANGELOG.md

executable arbitrary
    main-is:          Main.hs
    ghc-options:      -Wall -fwarn-tabs
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.3.0,
                      QuickCheck
    default-language: Haskell2010
