cabal-version:      2.4
name:               morse
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Tomasz Hołubowicz
maintainer:         alternateved@gmail.com
category:           Text
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Morse
    ghc-options:      -Wall -fwarn-tabs
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable morse
    main-is:          Main.hs
    ghc-options:      -Wall -fwarn-tabs
    hs-source-dirs:   src
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      morse,
                      QuickCheck
    default-language: Haskell2010

test-suite tests
    ghc-options:      -Wall -fno-warn-orphans
    type:             exitcode-stdio-1.0
    main-is:          tests.hs
    hs-source-dirs:   tests
    build-depends:    base,
                      containers,
                      morse,
                      QuickCheck
    default-language: Haskell2010
